--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,14 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+      value: Che Chang 
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: University of Wisconsin, Madison  
+      year: 2022
       description:
         - Description 1.
         - Description 2.
